build: introduce kora-publishing convention plugin in build-logic